--- a/.github/workflows/createNewAtomicSandBoxDemo.yml
+++ b/.github/workflows/createNewAtomicSandBoxDemo.yml
@@ -20,10 +20,8 @@ jobs:
       - name: Run script to update package.json and CDN in index.html on new branch
         run: |
           gem install nokogiri
-          ls
           rm index.html
-          ls
-          curl https://github.com/coveo/ui-kit/blob/master/packages/atomic/src/pages/index.html --output index.html
+          https://raw.githubusercontent.com/coveo/ui-kit/master/packages/atomic/src/pages/index.html --output index.html
           cd .github/scripts
           ruby update_package.rb ${{ github.event.client_payload.atomic_version }}
       - name: Create PR for new branch
@@ -47,7 +45,7 @@ jobs:
         run: |
           gem install nokogiri
           rm index.html
-          curl https://github.com/coveo/ui-kit/blob/master/packages/atomic/src/pages/index.html --output index.html
+          https://raw.githubusercontent.com/coveo/ui-kit/master/packages/atomic/src/pages/index.html --output index.html
           cd .github/scripts
           ruby update_package.rb latest
       - name: Create PR for new branch
