--- a/.github/workflows/createNewAtomicSandBoxDemo.yml
+++ b/.github/workflows/createNewAtomicSandBoxDemo.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           gem install nokogiri
           rm index.html
-          https://raw.githubusercontent.com/coveo/ui-kit/master/packages/atomic/src/pages/index.html --output index.html
+          curl https://raw.githubusercontent.com/coveo/ui-kit/master/packages/atomic/src/pages/index.html --output index.html
           cd .github/scripts
           ruby update_package.rb ${{ github.event.client_payload.atomic_version }}
       - name: Create PR for new branch
@@ -45,7 +45,7 @@ jobs:
         run: |
           gem install nokogiri
           rm index.html
-          https://raw.githubusercontent.com/coveo/ui-kit/master/packages/atomic/src/pages/index.html --output index.html
+          curl https://raw.githubusercontent.com/coveo/ui-kit/master/packages/atomic/src/pages/index.html --output index.html
           cd .github/scripts
           ruby update_package.rb latest
       - name: Create PR for new branch
