--- a/.github/workflows/createNewAtomicSandBoxDemo.yml
+++ b/.github/workflows/createNewAtomicSandBoxDemo.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Make a new Branch
         uses: peterjgrainger/action-create-branch@b48b0ca0e307c9b56f059b70274984ffeaa90a43
         env:
-          GITHUB_TOKEN: ${{ secrets.AUTHOR }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           branch: "csb-atomic-${{ github.event.client_payload.atomic_version }}"
       - name: Setup Ruby in runner
@@ -42,7 +42,7 @@ jobs:
       - name: Create PR for new branch
         uses: gr2m/create-or-update-pull-request-action@cbfed2a38aedceab8d9fc0d9ac14890fc181d39e
         env:
-          GITHUB_TOKEN: ${{ secrets.AUTHOR }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           title: "Update Latest Atomic CSB Demo"
           branch: "csb-atomic-latest"
