--- a/.github/workflows/createNewAtomicSandBoxDemo.yml
+++ b/.github/workflows/createNewAtomicSandBoxDemo.yml
@@ -12,7 +12,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          branch: "csb-atomic-${{ github.event.client_payload.atomic_version }}"
+          branch: "${{ github.event.client_payload.atomic_version }}"
       - name: Setup Ruby in runner
         uses: actions/setup-ruby@v1
         with:
@@ -45,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           title: "Update Latest Atomic CSB Demo"
-          branch: "csb-atomic-latest"
+          branch: "atomic-latest"
           commit-message: "Update latest version"
           assignees: dlutzCoveo
