add payload echo

--- a/.github/workflows/createNewAtomicSandBoxDemo.yml
+++ b/.github/workflows/createNewAtomicSandBoxDemo.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           ruby-version: '2.6'
       - uses: actions/checkout@v2
+      - run: 'echo "payload: ${{ toJson(github.event.client_payload) }}"'
       - name: Make a new Branch
         uses: peterjgrainger/action-create-branch@b48b0ca0e307c9b56f059b70274984ffeaa90a43
         env:
