checkout new branch

--- a/.github/workflows/createNewAtomicSandBoxDemo.yml
+++ b/.github/workflows/createNewAtomicSandBoxDemo.yml
@@ -18,6 +18,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           branch: "${{ github.event.client_payload.atomic_version }}"
+      - name: Checkout new branch
+        run: git checkout ${{ github.event.client_payload.atomic_version }}
       - name: Run script to update package.json and CDN in index.html on new branch
         run: |
           gem install nokogiri
