--- a/.github/workflows/createNewAtomicSandBoxDemo.yml
+++ b/.github/workflows/createNewAtomicSandBoxDemo.yml
@@ -18,9 +18,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           branch: "${{ github.event.client_payload.atomic_version }}"
-      - uses: actions/checkout@v2
-        with: 
-          ref: ${{ github.event.client_payload.atomic_version }}
+      - run: 'echo "branch"'
+      - run: git branch
       - name: Run script to update package.json and CDN in index.html on new branch
         run: |
           gem install nokogiri
