commit at the end

--- a/.github/workflows/createNewAtomicSandBoxDemo.yml
+++ b/.github/workflows/createNewAtomicSandBoxDemo.yml
@@ -12,14 +12,15 @@ jobs:
           ruby-version: '2.6'
       - uses: actions/checkout@v2
       - run: 'echo "payload: ${{ toJson(github.event.client_payload) }}"'
-      - name: Run script to update package.json and CDN in index.html on new branch
-        run: |
-          gem install nokogiri
-          cd .github/scripts
-          ruby update_package.rb ${{ github.event.client_payload.atomic_version }}
       - name: Make a new Branch
         uses: peterjgrainger/action-create-branch@b48b0ca0e307c9b56f059b70274984ffeaa90a43
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           branch: "${{ github.event.client_payload.atomic_version }}"
+      - name: Run script to update package.json and CDN in index.html on new branch
+        run: |
+          gem install nokogiri
+          cd .github/scripts
+          ruby update_package.rb ${{ github.event.client_payload.atomic_version }}
+          git commit -m "updated version"
