--- a/.github/workflows/createNewAtomicSandBoxDemo.yml
+++ b/.github/workflows/createNewAtomicSandBoxDemo.yml
@@ -25,4 +25,4 @@ jobs:
           ruby update_package.rb ${{ github.event.client_payload.atomic_version }}
           git config user.name ${{ secrets.AUTHOR }}
           git config user.email ${{ secrets.AUTHOR_EMAIL }}
-          git commit -m "updated version"
+          git commit -a -m "updated version"
